configs/k8s/lean_conformance_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lean-conformance-service
  namespace: internal-services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: ingress-lean
  tls:
    - hosts:
      - conformance.ae03.leantech.me
      secretName: ingress-lean-conformance-service-secret
  rules:
  - host: conformance.ae03.leantech.me
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lean-conformance-service
            port:
              number: 9090
